syntax = "proto3";

package textgeneration.v1;

import "google/api/annotations.proto";

option go_package = "github.com/yinziyang/cybertron/pkg/server/apis/textgeneration/v1;textgenerationv1";

service TextGenerationService {
  rpc Generate(GenerateRequest) returns (GenerateResponse) {
    option (google.api.http) = {
      post: "/v1/generate"
      body: "*"
    };
  }
}

message GenerateRequest {
  string input = 1;
  optional TextGenerationParameters parameters = 2;
}

message TextGenerationParameters {
  optional int64 top_k = 1;
  optional double top_p = 2;
  optional double temperature = 3;
  optional bool do_sample = 4;
}

message GenerateResponse {
  repeated string texts = 1;
  repeated double scores = 2;
}
